# container_factory

./: .clang-format  .travis.yml  CMakeLists.txt  README.md
.github/workflows/: github-actions.yml
cmake/tests/: test_boost_shared_ptr_hash.cpp
src/container_factory/: factory.hpp  has_insert.hpp  has_pushback.hpp  is_shared_ptr.hpp  is_unique_ptr.hpp
test/: CMakeLists.txt  config.h.cmake  container_factory_test.cpp  containerfactorytest.h  factory_insert_set_test.h  factory_push_back_test.h  factory_simple_type_test.h  factory_type_tests.h  factory_unique_key_violation_test.h  has_insert_test.h  has_push_back_test.h  is_shared_ptr_test.h  is_unique_ptr_test.h  is_vector_container.hpp  pointertypes.h  test_class_structure.h
